Ejercicio 2 - Calculadora - Se completa ejercicio, queda pendiente validaciones, pero eso no se solicita

--- a/ejercicio2/ejercicio3.html
+++ b/ejercicio2/ejercicio3.html
@@ -3,15 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ejercicio 3</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./assets/js/calculadora.js"></script>
+    <title>Calculadora</title>
 </head>
 
 <body>
-    <div>
+
+    <div style="text-align: center;">
         <div>
             <h2>
                 Resultado: <span class="resultado"></span>
             </h2>
+
             <div>
                 <div>
                     <div>
@@ -22,7 +27,7 @@
                         <label for="">Valor 2</label>
                         <input id="valor2" type="text">
                     </div>
-                    <div style="display: flex">
+                    <div style="margin-top: 1em;">
                         <button id="btn-sumar" type="button">
                             Sumar
                         </button>
@@ -32,11 +37,10 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
-    <script>
-    // Escríbe aquí tu código
-    </script>
+
 </body>
 
 </html>
