--- a/ejercicio2/ejercicio2.html
+++ b/ejercicio2/ejercicio2.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ejercicio 2</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./assets/js/colores.js" defer></script>
+    <title>Colores</title>
 </head>
 
 <body>
@@ -34,9 +37,6 @@
             </div>
         </div>
     </div>
-    <script>
-
-    </script>
 </body>
 
 </html>
