se agrega un id='caja-colores' al HTML para limitar el listener solo al div padre y no al document completo

--- a/ejercicio2/ejercicio2.html
+++ b/ejercicio2/ejercicio2.html
@@ -16,7 +16,7 @@
                 Paleta de colores
             </h2>
             <div style="display: flex;">
-                <div style="display: flex;flex-direction: column;">
+                <div id="caja-colores" style="display: flex;flex-direction: column;">
                     <button id="btn-1" style="background-color: #e53e3e; width:100px;height: 100px" type="button">
                     </button>
                     <button id="btn-2" style="background-color: #dd6b20; width:100px;height: 100px" type="button">
